fix: tap targets on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,3 +25,13 @@ h1 {
 p {
     text-align: justify;
 }
+
+.container a {
+    padding: .2em;
+}
+
+@media (pointer: coarse) {
+    .container a {
+        padding: .8em;
+    }
+}
